--- a/src/main/resources/templates/lista_becas.html
+++ b/src/main/resources/templates/lista_becas.html
@@ -12,6 +12,40 @@
 <body>
 
     <header th:replace="/layout/header::header"></header>
+	 <div class="container">
+		<div class="row">
+			<div class="col-12 offset-md-10">
+				<a th:href="@{/beca/nueva}" class="btn btn-outline-primary mt-5">Nuevo Becas</a>
+			</div>
+			<h3 class="mb-5 text-muted">Lista Becas</h3>
+			<div class="col-12 d-flex justify-content-center">
+				<table class="table table-striped table-hover">
+					<thead>
+						<tr class="table-info">
+							<th scope="col">Codigo</th>
+							<th scope="col">Curso</th>
+							<th scope="col">Fecha Inicio</th>
+							<th scope="col">Fecha Fin</th>
+							<th scope="col">Estado</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr th:each="beca :${becas}">
+							<th scope="row" th:text="${beca.codigo}"></th>
+							<td th:text="${beca.curso}"></td>
+							<td th:text="${beca.fechaInicio}"></td>
+							<td th:text="${beca.fechaFin}"></td>
+							<td th:text="${beca.estado}"></td>
+							<td>
+								<a href="#" id="editarDocente" class="btn btn-warning">Editar</a>
+								<a href="#" id="eliminarDocente" class="btn btn-danger">Eliminar</a>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
+	</div>
 
 
 
