Actualizacion de ListaBecas

--- a/src/main/resources/templates/lista_becas.html
+++ b/src/main/resources/templates/lista_becas.html
@@ -15,7 +15,7 @@
 	 <div class="container">
 		<div class="row">
 			<div class="col-12 offset-md-10">
-				<a th:href="@{/beca/nueva}" class="btn btn-outline-primary mt-5">Nuevo Becas</a>
+				<a th:href="@{/nuevo/nueva_becas}" class="btn btn-outline-primary mt-5">Nuevo Becas</a>
 			</div>
 			<h3 class="mb-5 text-muted">Lista Becas</h3>
 			<div class="col-12 d-flex justify-content-center">
