--- a/src/main/resources/templates/nuevo_alumno.html
+++ b/src/main/resources/templates/nuevo_alumno.html
@@ -24,27 +24,33 @@
                             <div class="form-outline mb-4">
                                 <label class="form-label" for="dniId">DNI </label>
                                 <input th:field="*{dni}" type="number" id="dniId" class="form-control" />
-                            	<div class="text-danger" th:if="${#fields.hasErrors('dni')}" th:errors="*{dni}"></div>
+                                <!--Mostrar el mensaje de error-->
+                                <div class="alert alert-danger text-black" role="alert"
+                                    th:if="${#fields.hasErrors('dni')}" th:errors="*{dni}"></div>
                             </div>
                             <div class="form-outline mb-4">
                                 <label class="form-label" for="nombresId">Nombres </label>
                                 <input th:field="*{nombre}" type="text" id="nombresId" class="form-control" />
-                                <div class="text-danger" th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}"></div>
+                                <div class="alert alert-danger text-black" th:if="${#fields.hasErrors('nombre')}"
+                                    th:errors="*{nombre}"></div>
                             </div>
                             <div class="form-outline mb-4">
                                 <label class="form-label" for="apellidoId">Apellidos </label>
                                 <input th:field="*{apellido}" type="text" id="apellidoId" class="form-control" />
-                                <div class="text-danger" th:if="${#fields.hasErrors('apellido')}" th:errors="*{apellido}"></div>
+                                <div class="alert alert-danger text-black" th:if="${#fields.hasErrors('apellido')}"
+                                    th:errors="*{apellido}"></div>
                             </div>
                             <div class="form-outline mb-4">
                                 <label class="form-label" for="emailId">Email </label>
                                 <input th:field="*{email}" type="text" id="emailId" class="form-control" />
-                                <div class="text-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
+                                <div class="alert alert-danger text-black" th:if="${#fields.hasErrors('email')}"
+                                    th:errors="*{email}"></div>
                             </div>
                             <div class="form-outline mb-4">
                                 <label class="form-label" for="telefonoId">Teléfono: </label>
                                 <input th:field="*{telefono}" type="number" id="telefonoId" class="form-control" />
-                                <div class="text-danger" th:if="${#fields.hasErrors('telefono')}" th:errors="*{telefono}"></div>
+                                <div class="alert alert-danger text-black" th:if="${#fields.hasErrors('telefono')}"
+                                    th:errors="*{telefono}"></div>
                             </div>
                             <button type="submit" class="btn btn-outline-success btn-block mb-4">Enviar</button>
                             <button type="submit" class="btn btn-outline-dark btn-block mb-4">Cancelar</button>
