--- a/src/main/resources/templates/lista_cursos.html
+++ b/src/main/resources/templates/lista_cursos.html
@@ -9,11 +9,51 @@
     <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
 </head>
+
 <body>
 
     <header th:replace="/layout/header::header"></header>
 
-
+    <div class="container">
+        <div class="row">
+            <div class="col-12 offset-md-10">
+                <a th:href="@{/curso/nuevo}" class="btn btn-outline-primary mt-5">Nuevo Curso</a>
+            </div>
+            <h3 class="mb-5 text-muted">Lista Cursos</h3>
+            <div class="col-12 d-flex justify-content-center">
+                <table class="table table-striped table-hover">
+                    <thead>
+                        <tr class="table-info">
+                            <th scope="col">Codigo</th>
+                            <th scope="col">Titulo</th>
+                            <th scope="col">Cateogia</th>
+                            <th scope="col">Fecha Inicio</th>
+                            <th scope="col">Fecha Fin</th>
+                            <th scope="col">Cantidad de Horas</th>
+                            <th scope="col">Modalidad</th>
+                            <th scope="col">Docente</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr th:each="curso :${cursos}">
+                            <th scope="row" th:text="${curso.codigo}"></th>
+                            <td th:text="${curso.titulo}"></td>
+                            <td th:text="${curso.categoria}"></td>
+                            <td th:text="${#temporals.format(curso.fechaInicio, 'dd/MM/yyyy')}"></td>
+                            <td th:text="${#temporals.format(curso.fechaFin, 'dd/MM/yyyy')}"></td>
+                            <td th:text="${curso.cantHoras}"></td>
+                            <td th:text="${curso.modalidad}"></td>
+                            <td th:text="${curso.docente.apellido}+', '+${curso.docente.nombre}"></td>
+                            <td>
+                                <a href="#" id="editarDocente" class="btn btn-warning">Editar</a>
+                                <a href="#" id="eliminarDocente" class="btn btn-danger">Eliminar</a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 
 
     <footer th:replace="/layout/footer::footer"></footer>
@@ -23,4 +63,5 @@
     <script src="/webjars/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 
 </body>
+
 </html>
